# directory-entry-token

./: README.adoc  jwks.json  key1.private.jwk  key2.private.jwk  pyproject.toml
directory_entry_token/: generate_keys.py  sign.py  verify.py
